fix button spacing

--- a/sass/px-vis-dynamic-menu.scss
+++ b/sass/px-vis-dynamic-menu.scss
@@ -90,6 +90,10 @@ $inuit-enable-btn--icon : true;
   margin: 0;
 }
 
+.btn.btn--bare--primary.btn--icon {
+  height: calculateRem(16px);
+}
+
 // Trumps
 
 $inuit-enable-paddings--tiny             : true;
