--- a/sass/px-vis-register.scss
+++ b/sass/px-vis-register.scss
@@ -148,6 +148,10 @@ div.flex + div.flex {
   margin-left: $inuit-base-spacing-unit;
 }
 
+.btn.btn--bare--primary.btn--icon {
+  height: calculateRem(16px);
+}
+
 // Trumps
 $inuit-enable-margins : true;
 $inuit-enable-paddings : true;
